Fixed margins inside watchlist panel on mobile

--- a/src/components/Content/Watchlists/WatchlistPanel.scss
+++ b/src/components/Content/Watchlists/WatchlistPanel.scss
@@ -38,4 +38,8 @@
       }
     }
   }
+
+  .ant-collapse-content-box {
+    padding: 0;
+  }
 }
